修改了虚拟机参数配置